# OneMotor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  package.xml  west.yml
.github/: copilot-instructions.md
.github/workflows/: docs.yml  linux.yml  zephyr.yml
cmake/: OneMotorConfig.cmake.in  OneMotorConfiguration.cmake  OneMotorExamples.cmake  OneMotorFindAnkerl.cmake  OneMotorFindHyCAN.cmake  OneMotorFindMpUnits.cmake  OneMotorFindOnePid.cmake  OneMotorFindTlExpected.cmake  OneMotorGenerateDoc.cmake  OneMotorLinux.cmake  OneMotorRos2.cmake  OneMotorTests.cmake  OneMotorZephyr.cmake
doc/: Doxyfile
doc/pages/: integration_guide.md  mainpage.md
docs/: Doxyfile  wrangler-docs.toml
docs/pages/: generals.md  integration_guide.md  main_concepts.md  mainpage.md  motors.md
docs/pages/general/: can_driver.md  othread.md
docs/pages/motor/: DjiMotor.md  DmMotor.md
example/: basic.cpp
example/DJI/: GM6020.cpp  M2006_Init.cpp  M3508.cpp  M3508Guard.cpp  M3508_MIT.cpp  M3508_Positional.cpp
example/DM/: J4310.cpp
example/IMotor/: IMotorArray.cpp
example/LK/: angular.cpp
example/zephyr/motor/DJI2006/: CMakeLists.txt  Kconfig
example/zephyr/motor/DJI2006/src/: main.cpp
include/OneMotor/Can/: CanDriver.hpp  CanFrame.hpp
include/OneMotor/Control/: PID.hpp  PIDChain.hpp  pid_c_api.h
include/OneMotor/Motor/: IMotor.hpp  MotorAcessor.hpp  MotorBase.hpp  MotorConcepts.hpp  MotorControlPolicy.hpp
include/OneMotor/Motor/DJI/: DjiFrame.hpp  DjiFrames.hpp  DjiMotor.hpp  DjiMotorFrames.hpp  DjiPolicy.hpp  DjiTraits.hpp  M3508.hpp  M3508Base.hpp  M3508Frames.hpp  MotorGuard.hpp  MotorManager.hpp  Traits.hpp
include/OneMotor/Motor/DM/: DmFrame.hpp  DmMotor.hpp  DmPolicy.hpp  DmTraits.hpp  J4310.hpp  J4310Frame.hpp
include/OneMotor/Thread/: Othread.hpp
include/OneMotor/Units/: Units.hpp
include/OneMotor/Util/: Arithmetic.hpp  CCM.h  DeltaT.hpp  DoubleBuffer.hpp  DtcmAllocator.hpp  Error.hpp  Panic.hpp  SpinLock.hpp
include/one-motor/can/: CanDriver.hpp  CanFrame.hpp
include/one-motor/control/: PID.hpp
include/one-motor/motor/DJI/: M3508.hpp  M3508Base.hpp  M3508Frames.hpp  MotorManager.hpp
include/one-motor/thread/: CanFrameAwaiter.hpp  CoroTask.hpp  Othread.hpp
include/one-motor/util/: Arithmetic.hpp  DeltaT.hpp  Panic.hpp  SpinLock.hpp
include/one/can/: CanDriver.hpp  CanFrame.hpp
include/one/motor/: Error.hpp  IMotor.hpp  Units.hpp
include/one/motor/dji/: DjiFrame.hpp  DjiModels.hpp  DjiMotor.hpp  DjiParam.hpp  MotorGuard.hpp  MotorManager.hpp
include/one/motor/dm/: DmFrame.hpp  DmModels.hpp  DmMotor.hpp  DmParam.hpp
include/one/motor/lk/: LkFrame.hpp  LkModels.hpp  LkMotor.hpp  LkParam.hpp  MotorManager.hpp
include/one/thread/: Othread.hpp
include/one/units/: Units.hpp
include/one/utils/: DoubleBuffer.hpp  DtcmAllocator.hpp  Panic.hpp
src/Can/: L_CanDriver.cpp  Z_CanDriver.cpp
src/Control/: N_PID.cpp  N_pid_c_api.cpp
src/Motor/DJI/: L_MotorGuard.cpp  N_M3508.cpp  N_M3508Base.cpp  N_M3508Frames.cpp  N_MotorManager.cpp
src/Motor/DM/: N_DmFrame.cpp  N_J4310.cpp  N_J4310Frame.cpp
src/Thread/: L_Othread.cpp  Z_Othread.cpp
src/Util/: L_DeltaT.cpp  L_Panic.cpp  L_SpinLock.cpp  Z_DeltaT.cpp  Z_Panic.cpp  Z_SpinLock.cpp
src/can/: L_CanDriver.cpp  L_CanFrame.cpp  Z_CanDriver.cpp
src/control/: N_PID.cpp
src/motor/DJI/: N_M3508.cpp  N_M3508Base.cpp  N_M3508Frames.cpp  N_MotorManager.cpp  N_MotorMaster.cpp
src/motor/dji/: L_MotorGuard.cpp
src/motor/dm/: N_DmFrame.cpp
src/motor/lk/: N_LkFrame.cpp  N_MotorManager.cpp
src/thread/: L_CoroTask.cpp  L_Othread.cpp  N_CanFrameAwaiter.cpp  Z_Othread.cpp
src/util/: L_DeltaT.cpp  L_Panic.cpp  L_SpinLock.cpp
src/utils/: L_Panic.cpp  Z_DtcmAllocator.cpp  Z_Panic.cpp
test/: PID_Latency.cpp
test/zephyr/DeltaT/: CMakeLists.txt  prj.conf  testcase.yaml
test/zephyr/DeltaT/src/: main.cpp
tests/zephyr/DeltaT/: Kconfig  prj.conf
tests/zephyr/DeltaT/src/: main.cpp
tests/zephyr/PID/: prj.conf  testcase.yaml
tests/zephyr/PID/src/: main.cpp
tests/zephyr/SpinLock/: CMakeLists.txt  testcase.yaml
tests/zephyr/SpinLock/src/: main.cpp
tests/zephyr/motor/DJI2006/: CMakeLists.txt  prj.conf
tests/zephyr/motor/DJI2006/src/: main.cpp
zephyr/: Kconfig  module.yml
